--- a/package.json
+++ b/package.json
@@ -1,5 +1,3 @@
-
-
 {
   "name": "my-app",
   "version": "0.1.0",
@@ -11,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
